<resources>
    <string name="app_name">Songified</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="internet_error">Network called failed with message Unable to resolve host": No address associated with hostname</string>
    <string name="select_file">Select File</string>
    <string name="previous_uploads">Previous Uploads</string>
    <string name="semi_ring_blue">semi_ring_blue</string>
    <string name="cover_art">cover art</string>
    <string name="scale">Scale</string>
    <string name="tempo">Tempo</string>
    <string name="time_signature">Time Signature</string>
    <string name="add_comment">Comment</string>
    <string name="save">Save</string>
    <string name="comments">Comments</string>
    <string name="account_info">Account Info</string>
    <string name="points">POINTS</string>
    <string name="level">LEVEL</string>
    <string name="songbooks">Songbooks</string>

    <string name="sign_out">Sign Out</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="sign_in_msg">Sign in to explore all features</string>
    <string name="adding_info_for">Adding Info for</string>
    <string name="song_info">Song Info</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="add_info_msg">*Your info will be published once it is verified</string>
    <string name="loading">Loading …</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="create_new_songbook">Create new songbook</string>
    <string name="songbook_name">Songbook Name</string>
    <string name="create">Create</string>
    <string name="select_songbook_to_save">Select Songbook to Save</string>
    <string name="edit_songbook">Edit Songbook</string>
    <string name="update">Update</string>
    <string name="upload_song">Upload Song</string>
    <string name="song_name">Song Name</string>
    <string name="upload">Upload</string>
    <string name="still_processing">Still Processing</string>
    <string name="processing_msg">Your audio file is being processed.</string>
    <string name="tap_to_refresh">TAP TO REFRESH</string>
    <string name="audio_analysis">AUDIO ANALYSIS</string>
    <string name="audio_analysis_title">Audio Analysis</string>
    <string name="keys">Keys</string>
    <string name="genres">Genres</string>
    <string name="moods">Moods</string>
    <string name="musical_era_tag">Musical Era Tag</string>
    <string name="processing_illustration">processing illustration</string>
    <string name="songified_logo">Songified Logo</string>
    <string name="search_song">Search song …</string>
    <string name="search_icon">Search icon</string>
    <string name="back_button">back button</string>
    <string name="no_songs">No songs in this songbook! Search a song and add it here.</string>
    <string name="notes">Notes</string>
    <string name="no_songbooks">No songbooks found!</string>
    <string name="add_new_songbook">add new songbook</string>
    <string name="energy_level_data">Energy level : %1$s</string>
    <string name="emotional_profile_data">Emotional profile : %1$s</string>
    <string name="uploading_file">Uploading file …</string>
    <string name="songbooks_count_data_multiple">%1$d books</string>
    <string name="songbooks_count_data_single">%1$d book</string>
    <string name="comment_user_data">%1$s | Level %2$s</string>
    <string name="covert_art_transition">cover_art_transition</string>
    <string name="no_search_result">Nothing found for \"%1$s\"</string>
    <string name="songs_count_data">%1$d songs</string>
    <string name="nav_title_search">Search</string>
    <string name="nav_title_songbooks">Songbooks</string>
    <string name="nav_title_profile">Profile</string>
    <string name="no_comments">No comments to show</string>
    <string name="no_songbooks_found">No songbooks found</string>
    <string name="welcome_to_songified">Welcome to Songified</string>
    <string name="intro_illustration">intro_illustration</string>
    <string name="intro_1_descr">Explore info about a song by searching or even uploading any song on your device!</string>
    <string name="how_to_level_up">How to level up?</string>
    <string name="intro_2_descr">Add an interesting info about a song as a comment. Once your comment is approved, points will be awarded to you</string>
    <string name="next">next</string>
    <string name="get_started">get started</string>
    <string name="intro_3_descr">A one step sign in to enjoy all features of the app</string>
    <string name="sign_in_to_explore">Sign In to Explore</string>
    <string name="skip">SKIP</string>
    <string name="not_now">NOT NOW</string>
    <string name="gain_points_and_get_levelled_up">Gain points and get levelled up</string>
    <string name="save_songs_to_songbook">Save songs to songbook</string>
    <string name="upload_and_analyse_any_song">Upload and analyse any song</string>
    <string name="get_points">Get points</string>
    <string name="get_verified">Get verified</string>
    <string name="add_comment_intro_2">Add comment</string>
    <string name="welcome_to">Welcome to</string>
    <string name="server_under_maintenance">Server Under Maintenance</string>
    <string name="server_maintenance_msg">This feature is currently under maintenance. We will be back soon.</string>
    <string name="sign_in">Sign In</string>


</resources>