<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="36dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/intro_illustration"
                android:src="@drawable/intro_2_illus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/how_to_level_up"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/intro_2_descr"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:drawablePadding="8dp"
                    android:text="@string/add_comment_intro_2"
                    android:textSize="20sp"

                    app:drawableStartCompat="@drawable/ic_tick" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:drawablePadding="8dp"
                    android:text="@string/get_verified"
                    android:textSize="20sp"

                    app:drawableStartCompat="@drawable/ic_tick" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:drawablePadding="8dp"
                    android:text="@string/get_points"
                    android:textSize="20sp"
                    app:drawableStartCompat="@drawable/ic_tick" />
            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/btn_intro_2_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="12dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="20dp"
            android:text="@string/next" />



    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.core.widget.NestedScrollView>