<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="36dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_to_explore"
                android:textSize="30sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/intro_3_descr"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:contentDescription="@string/intro_illustration"
                android:src="@drawable/intro_3_illus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawablePadding="8dp"
                android:text="@string/upload_and_analyse_any_song"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_upload" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="8dp"
                android:text="@string/save_songs_to_songbook"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_disc_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="8dp"
                android:text="@string/gain_points_and_get_levelled_up"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_graph" />

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/google_sign_in_intro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/google"
                    android:gravity="center"
                    android:padding="12dp"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="#8A000000"
                    android:textStyle="bold"
                    app:backgroundTint="#ffffff"
                    app:icon="@drawable/google"
                    app:iconPadding="12dp"
                    app:iconSize="20dp"
                    app:iconTint="@null" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/pb_login_intro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="28dp"
                    android:indeterminate="true"
                    android:visibility="gone" />

            </androidx.coordinatorlayout.widget.CoordinatorLayout>


            <TextView
                android:id="@+id/tv_not_now_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:text="@string/not_now"
                android:textColor="#CCFFFFFF" />
        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.core.widget.NestedScrollView>