<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:cardBackgroundColor="@color/songified_black"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_song"
            android:textSize="18sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout

            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/song_name"
            android:textColorHint="#A6FFFFFF"
            app:hintTextColor="#ffffff"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_file_name_dialog_upload_song"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_upload_song_dialog"
                style="@style/FilledButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp"
                android:text="@string/upload" />

            <Button
                android:id="@+id/btn_cancel_dialog_upload_song"
                style="@style/OutlinedButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/cancel"
                android:textColor="#8CFFFFFF" />
        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>