<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_heading_user_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/account_info"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"

            android:layout_marginTop="16dp"
            android:background="@drawable/ic_semi_ring"
            android:gravity="center"
            android:padding="8dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_dp_user_profile"
                android:layout_width="80dp"
                android:layout_height="80dp"


                />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_id_user_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/img_dp_user_profile"
            app:layout_constraintStart_toStartOf="@id/img_dp_user_profile"
            app:layout_constraintTop_toBottomOf="@id/img_dp_user_profile" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">


            <TextView
                android:id="@+id/tv_points_user_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#33FFFFFF" />

        <LinearLayout
            android:id="@+id/layout_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">


            <TextView
                android:id="@+id/tv_level_user_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#33FFFFFF" />

        <LinearLayout
            android:id="@+id/layout_songbooks_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">


            <TextView
                android:id="@+id/tv_songbook_count_user_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/songbooks"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginTop="40dp"
        android:gravity="bottom"
        android:orientation="vertical"


        >

        <TextView
            android:id="@+id/tv_sign_out_user_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/songified_card_color"
            android:padding="20dp"

            android:text="@string/sign_out" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#21FFFFFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/songified_card_color"
            android:padding="20dp"
            android:text="@string/privacy_policy" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#21FFFFFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/songified_card_color"
            android:padding="20dp"
            android:text="@string/terms_and_conditions" />


    </LinearLayout>


</LinearLayout>