<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_sonbooks_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/songbooks"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_songbooks_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/tv_sonbooks_heading"
            app:layout_constraintTop_toBottomOf="@id/tv_sonbooks_heading" />


        <ImageView
            android:id="@+id/img_no_data_songbooks"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/no_songbooks"
            android:src="@drawable/bookshelf"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_no_data_songbooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/no_songbooks"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/img_no_data_songbooks"
            app:layout_constraintStart_toStartOf="@+id/img_no_data_songbooks"


            app:layout_constraintTop_toBottomOf="@+id/img_no_data_songbooks" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_songbooks_fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_songbooks_count" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_new_songbook"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_new_songbook"
        android:src="@drawable/ic_add" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>